controlpanel/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbus-front
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: airbus-front
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: airbus-front
    spec:
      containers:
      - env:
        - name: "API_URL"
          value: "https://controlpanel-backend.ithub.space"
        image: nexus.ithub.space/airbus-front:2
        imagePullPolicy: IfNotPresent
        name: controlpanel
        ports:
        - containerPort: 4200
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
