controlpanel/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbus-front-service
spec:
  type: ClusterIP
  ports:
  - name: airbus-front
    port: 80
    targetPort: 4200
    protocol: TCP
  selector:
    app: airbus-front-service
