controlpanel/ingress-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod    
  name: controlpanel-ingress
  namespace: default
spec:
  rules:
  - host: controlpanel-backend.ithub.space
    http:
      paths:
      - backend:
          serviceName: controlpanel-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - controlpanel-backend.ithub.space
    secretName: controlpanel-backend-ithub-space-prod-tls
